--- a/MEGA_PROJECT/src/main/frontend/src/pages/Project.css
+++ b/MEGA_PROJECT/src/main/frontend/src/pages/Project.css
@@ -67,6 +67,7 @@ body.dark-mode .info-mode .duration {
 ============================= */
 .button-group {
   margin-top: 10px;
+  display: flex;
 }
 .button-group button {
   margin-right: 8px;
