--- a/MEGA_PROJECT/src/main/frontend/src/pages/NoticeComponent.css
+++ b/MEGA_PROJECT/src/main/frontend/src/pages/NoticeComponent.css
@@ -93,6 +93,7 @@
     min-height: 120px;
     max-height: 300px;
     overflow-y: auto;
+    max-width: 94%;
     resize: none; /* ✅ 크기 조절 막음 */
 }
 
@@ -124,6 +125,8 @@
     font-size: 0.95rem; /* ✅ 폰트 크기 살짝 줄이기 */
     min-width: 80px; /* ✅ 버튼 너비 줄이기 */
     transition: background 0.3s ease-in-out;
+    justify-content: center;
+    float: right;
 }
 
 .notice-submit-btn:hover {
